update ssl and domain for ingress
